boreal/tests/assets/invalid_files/compilation/invalid_identifier_index_type.yar
import "pe"

rule a {
    condition:
        pe.sections["a"] == 3
}
